Fix einsatzentry overflow

--- a/FeuerwehrUpdates/wwwroot/style.css
+++ b/FeuerwehrUpdates/wwwroot/style.css
@@ -107,12 +107,14 @@ h4, h3 {
 }
 
 .einsatzentry {
-    width: 50%;
+    width: 95%;
+    max-width: 600px;
     border: 1px solid white;
     border-radius: 10px;
     margin: auto;
     margin-bottom: 20px;
     cursor: pointer;
+    overflow-x: auto;
 }
 
 .einsatzentry > h3 {
